# HokkaidoGenerator

./: .gitignore  README.md
dogen-frontend/: bun.lockb  package.json  svelte.config.js
dogen-frontend/src/components/: cityinfo.svelte
dogen-frontend/src/lib/: color.ts  generator.ts  map.ts  view.ts
dogen-frontend/src/lib/engine/: dogen_generator.d.ts  dogen_generator.js  dogen_generator_bg.wasm  dogen_generator_bg.wasm.d.ts  package.json
dogen-frontend/src/routes/: +page.svelte
dogen-frontend/static/dataset/: placenames.csv
dogen-generator/: Cargo.toml  Makefile
dogen-generator/dataset/: placenames.csv
dogen-generator/src/: buffer.rs  lib.rs  main.rs  placename.rs  standard_map.rs  terrain.rs  types.rs
dogen-generator/src/map/: generator.rs  map.rs  mod.rs  provider.rs  terrain.rs
dogen-generator/src/placename/: mod.rs
frontend/: bun.lockb  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/components/: cityinfo.svelte  citynameEn.svelte  citynameJa.svelte  introduction.svelte  panel.svelte
frontend/src/lib/: color.ts  config.ts  data.ts  map.ts  translation.ts  view.ts
frontend/src/lib/dictionary/: dictionary-en.json  dictionary-ja.json  en.json  ja.json
frontend/src/lib/engine/: dogen_generator.d.ts  (+6 more)
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  store.ts
frontend/static/archived/: +page.svelte  +page.ts
frontend/static/dataset/: placenames.csv
generator/: Cargo.toml  Makefile
generator/src/: lib.rs  placename.rs  standard_map.rs  types.rs
generator/src/map/: generator.rs  mod.rs  terrain.rs
