[package]
name = "dogen-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastlem = "0.1.4"
name-engine = "0.1.0"
naturalneighbor = "1.2.2"
noise = "0.9.0"
rand = "0.8.5"
street-engine = "0.1.0"
terrain-graph = "1.0.1"
